syntax = "proto3";

package reservation;

service Reservation {
  // MakeReservation makes a reservation based on given information
  rpc MakeReservation(Request) returns (Result);
  // CheckAvailability checks if given information is available
  rpc CheckAvailability(Request) returns (Result);
}

message Request {
  string customerName = 1;
  repeated string hotelId = 2;
  string inDate = 3;
  string outDate = 4;
  int32  roomNumber = 5;
}

message Result {
  repeated string hotelId = 1;
}
